@@ -92,6 +92,12 @@ block</td>
                      style of standard java memory specs (e.g. 128m = 128 MBytes)</td>
     <td valign="top" align="center">No</td>
   </tr>
+  <tr>
+    <td valign="top">preservelastmodified</td>
+    <td valign="top">Give the signed file the same last modified
+      time as the original jar file.</td>
+    <td valign="top" align="center">No; default false.</td>
+  </tr>
 </table>
 <h3>Parameters as nested elements</h3>
 <table border="1" cellpadding="2" cellspacing="0">
